Robotski manipulator PA-10 finished

--- a/literatura.bib
+++ b/literatura.bib
@@ -92,6 +92,16 @@
 	address = {San Diego}
 }
 
+@article{zlajpah_dynamics_red,
+	title={Dynamics of Internal Motion of Redundant Manipulators},
+	author={Leon ?lajpah},
+	journal={IEEE},
+	year={1997},
+	pages={95 - 100},
+	address = {Bzdabest}
+}
+
+
 @article{voung_pa10,
 	title={Dynamic Model Identification for Industrial Robots},
 	author={Vuong, Ngoc D. and Ang, Marcelo H. Jr.},
